@@ -15,7 +15,7 @@
   | Author: Georg Richter <georg@php.net>                                |
   +----------------------------------------------------------------------+
 
-  $Id: mysqli_api.c,v 1.118.2.4 2005/10/10 20:06:34 tony2001 Exp $ 
+  $Id: mysqli_api.c,v 1.118.2.5 2005/10/15 06:32:26 georg Exp $ 
 */
 
 #ifdef HAVE_CONFIG_H
@@ -739,10 +739,6 @@ PHP_FUNCTION(mysqli_fetch_fields)
 	}
 
 	MYSQLI_FETCH_RESOURCE(result, MYSQL_RES *, &mysql_result, "mysqli_result"); 
-
-	if (!(field = mysql_fetch_field(result))) {
-		RETURN_FALSE;
-	}
 
 	array_init(return_value);
 
